syntax = "proto3";
package alfred.user_profile.v1;

option go_package = "pb/";

import "google/api/annotation.proto";
import "include/graphql.proto";
import "google/protobuf/timestamp.proto";

service UserProfiles {
    rpc GetUserProfile(GetUserProfileRequest) returns (UserProfile){
        option (google.api.http) = {
            get: "/v1/user-profile/get-user-profile/{id}"
        };
        option (graphql.schema) = {
            type: QUERY
            name: "user"
        };
    }

    rpc GetUserProfileBySub(GetUserProfileBySubRequest) returns (UserProfile){
        option (google.api.http) = {
            get: "/v1/user-profile/get-user-profile-by-sub/{sub}"
        };
        option (graphql.schema) = {
            type: QUERY
            name: "userBySub"
        };
    }
}

message GetUserProfileRequest {
    string id = 1;
}

message GetUserProfileBySubRequest{
    string sub = 1;
}
message UserProfile {
    string id = 1;  //generated by uuid
    string sub = 2; // external unique_id
    string name = 3; // name of the user
    string user_name = 4; // a username provided by external application
    string email = 5; //email of user
    string phone_number = 6; // phone of user
    SOURCE external_source = 7;
    string profile_pic_url = 8;
    google.protobuf.Timestamp token_valid_till = 9;
}

enum SOURCE {
    UNKNOWN = 0;
    GITHUB = 1;
    GITLAB = 2;
    BITBUCKET = 3;
    EMAIL_PASSWORD = 4;
}
